force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__CheckedRecordCount__c.field-meta.xml
<CustomField>
    <fullName>Q9__CheckedRecordCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Checked Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>