force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__Data_Population_Skip__c.field-meta.xml
<CustomField>
    <fullName>Q9__Data_Population_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Population Skip</label>
    <type>Checkbox</type>
</CustomField>