force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__DP_Last_N_Days_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Q9__DP_Last_N_Days_Attempt__c</fullName>
    <label>DP Last N Days Attempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>