force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>Q9__ErrorLog__c</fullName>
    <description>Description</description>
    <label>Error Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>