force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__Last_N_Days_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Q9__Last_N_Days_Attempt__c</fullName>
    <description>The time interval over which we attempt to count records. For example, we try to retrieve a count of records that have been modified over the last 360 days, 270 days, etc.</description>
    <label>Last N Days Attempt</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>