force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__Last_N_Days_Success__c.field-meta.xml
<CustomField>
    <fullName>Q9__Last_N_Days_Success__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time interval over which the record count was finally accumulated. This value is used in the Record Type Usage, Data Population, and Picklist Value Population batches to limit the number of records returned, preventing Internal Salesforce.com Errors.</description>
    <label>Last N Days Success</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>