force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__LastCreatedDateLog__c.field-meta.xml
<CustomField>
    <fullName>Q9__LastCreatedDateLog__c</fullName>
    <label>Last Created Date Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>