force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__LastModifiedDateLog__c.field-meta.xml
<CustomField>
    <fullName>Q9__LastModifiedDateLog__c</fullName>
    <description>Last modified date on ObjectName__c related Object</description>
    <label>Last Modified Date Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>