force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Q9__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>