force-app/main/default/objects/Q9__ElementsObjectSummary__c/fields/Q9__RecordCountLogById__c.field-meta.xml
<CustomField>
    <fullName>Q9__RecordCountLogById__c</fullName>
    <label>Record Count  Log By Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>